--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 replay_pid*
 /FACTURACION_PANADERIA/nbproject/private/
 /FACTURACION_PANADERIA/build/
+/EjemploCapasWebJava/nbproject/private/
