Se elimino el Proyecto de escritorio F2

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ replay_pid*
 /FACTURACION_PANADERIA/nbproject/private/
 /FACTURACION_PANADERIA/build/
 /EjemploCapasWebJava/nbproject/private/
+/Ejemplo_JPA/nbproject/private/
+/PROYECTO_PAE_FACTURACION_WEB/nbproject/private/
