Formulario Clientes Terminado

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ replay_pid*
 /EjemploCapasWebJava/nbproject/private/
 /Ejemplo_JPA/nbproject/private/
 /PROYECTO_PAE_FACTURACION_WEB/nbproject/private/
+/PROYECTO_PAE_FACTURACION_WEB/dist/
