--- a/PROYECTO_PAE_FACTURACION_WEB/nbproject/project.properties
+++ b/PROYECTO_PAE_FACTURACION_WEB/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
+file.reference.javax.servlet-3.0.jar=lib\\javax.servlet-3.0.jar
 file.reference.mssql-jdbc-8.4.1.jre8__1_.jar=D:\\PROGRAMACION INA\\PAE Java\\Ejemplo_JPA\\lib\\mssql-jdbc-8.4.1.jre8 (1).jar
 includes=**
 j2ee.compile.on.save=true
@@ -41,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv510ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-8.4.1.jre8__1_.jar}
+    ${file.reference.mssql-jdbc-8.4.1.jre8__1_.jar}:\
+    ${file.reference.javax.servlet-3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
